--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ html {
 body {
   margin: 0;
   background-color: #e5e5e5;
+  background-image: url('../img/bg.svg');
 }
 
 h2,
@@ -57,35 +58,48 @@ section {
 }
 
 .wrap {
-  padding-bottom: 10px;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+  grid-template-areas:
+    'h1 img'
+    'contact img';
   justify-content: space-between;
 }
 
 .wrap h1 {
-  width: 290px;
-  margin-right: 10px;
+  grid-area: h1;
+  max-width: 290px;
   margin-bottom: 20px;
   align-self: start;
 }
 
 .wrap img {
+  grid-area: img;
   display: block;
-  width: 100px;
-  height: 130px;
+  width: 250px;
+  height: 300px;
   -o-object-fit: cover;
   object-fit: cover;
   border-radius: 5px;
+}
+
+.contact {
+  grid-area: contact;
 }
 
 .contact h2 {
   width: 190px;
 }
 
-.contact ul {
+.contact ul,
+.experience ul {
+  padding-left: 30px;
+}
+
+.skills ul {
   padding-left: 25px;
 }
+
 .contact li {
   padding-left: 5px;
   padding-bottom: 10px;
@@ -125,17 +139,41 @@ section {
   width: 180px;
 }
 
-.experience ul {
-  padding-left: 20px;
-}
-
 .english h2 {
   width: 120px;
+}
+
+@media (max-width: 768px) {
+  .contaier {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 630px) {
+  .wrap {
+    display: grid;
+    grid-template-columns: 1fr, 1fr;
+    grid-template-areas:
+      'h1 h1'
+      'img img'
+      'contact contact';
+    grid-row-gap: 30px;
+  }
+
+  .wrap img {
+    width: 100%;
+    height: 450px;
+  }
 }
 
 @media (max-width: 350px) {
   .contact a,
   .code a {
     font-size: 18px;
+  }
+
+  .wrap img {
+    width: 100%;
+    height: auto;
   }
 }
